# shmupwarz-cpp

./: .gitignore  CMakeLists.txt  component.json  configure  license.md  readme.md  shmupwarz
docs/: index.data  index.html.mem  index.js  index.wasm
include/: Components.h  Components.hpp  Entities.h  Entities.hpp  GameSystems.h  GameSystems.hpp  IGameSystems.hpp  ResourceManager.h  Shmupwarz.1.h  Shmupwarz.h  Shmupwarz.hpp  SpriteRenderer.h  Systems.h  Texture2D.h  components.h  demo.h  entities.h  readme.md  systems.h  texture.h
include/artemis/: IAspect.hpp  IComponent.hpp  IComponentManager.hpp  IComponentMapper.hpp  IComponentPool.hpp  IComponentType.hpp  IComponentTypeFactory.hpp  IEntity.hpp  IEntityManager.hpp  IEntityObserver.hpp  IEntitySystem.hpp  IFactory.hpp  IManager.hpp  IPooledComponent.hpp  IWorld.hpp  artemis.hpp  readme.md
include/artemis/Blackboard/: Blackboard.hpp
include/artemis/Core/: Aspect.hpp  Component.hpp  ComponentFactory copy.hpp  ComponentFactory.hpp  ComponentManager.hpp  ComponentMapper.hpp  ComponentPool.hpp  ComponentType.hpp  ComponentTypeFactory.hpp  Entity.hpp  EntityManager.hpp  EntityObserver.hpp  EntitySystem.hpp  Exceptions.hpp  Factory.hpp  IAspect.hpp  IComponent.hpp  IComponentManager.hpp  IComponentMapper.hpp  (+16 more)
include/core/: CStrng.hpp  Core.hpp  Exceptions.hpp  Stopwatch.hpp  TimeSpan.hpp
include/system/: Exceptions.h  TimeSpan.h
include/xna/: DisplayOrientation.hpp  Game copy.hpp  Game.h  Game.hpp  GameBase.h  GamePlatform.h  GamePlatform.hpp  GameRunBehavior.h  GameRunBehavior.hpp  GameTime.hpp  GameWindow.h  GameWindow.hpp  GraphicsDeviceManager.h  GraphicsDeviceManager.hpp  IFactory.hpp  IGame.hpp  IGamePlatform.hpp  IGameWindow.hpp  Point.h  Rectangle.h  Rectangle.hpp  readme.md  xna.hpp
lib/: libwren.bc
src/: Entities.cpp  GameSystems.cpp  ResourceManager.cpp  Shader.cpp  Shmupwarz.1.cpp  Shmupwarz.cpp  SpriteRenderer.cpp  Systems.cpp  Texture2D.cpp  demo.cpp  entities.cpp  main.cpp  program.cpp  sprite_renderer.cpp  systems.cpp  test copy.cpp  test.cpp
src/engine/: game.cpp  resource_manager.cpp  texture.cpp
src/system/: TimeSpan.cpp
src/xna/: Game.cpp  GameBase.cpp  GamePlatform.cpp  GameWindow.cpp  GraphicsDeviceManager.cpp  Point.cpp  Rectangle.cpp  readme.md
(+49 files in other folders)
